--- a/dialog.ui
+++ b/dialog.ui
@@ -6,85 +6,144 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>647</width>
-    <height>323</height>
+    <width>611</width>
+    <height>285</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QPushButton" name="pushButton">
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>240</y>
-     <width>93</width>
-     <height>28</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>PushButton</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton_2">
-   <property name="geometry">
-    <rect>
-     <x>430</x>
-     <y>240</y>
-     <width>93</width>
-     <height>28</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>PushButton</string>
-   </property>
-  </widget>
-  <widget class="QTextEdit" name="textEdit">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>50</y>
-     <width>81</width>
-     <height>31</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QTextEdit" name="textEdit_2">
-   <property name="geometry">
-    <rect>
-     <x>390</x>
-     <y>50</y>
-     <width>131</width>
-     <height>41</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>60</y>
-     <width>55</width>
-     <height>16</height>
+     <x>24</x>
+     <y>30</y>
+     <width>111</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>Page</string>
+    <string>Print From Page</string>
+   </property>
+  </widget>
+  <widget class="QTextEdit" name="BeginTextEdit">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>20</y>
+     <width>61</width>
+     <height>31</height>
+    </rect>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>140</y>
-     <width>55</width>
-     <height>16</height>
+     <x>200</x>
+     <y>30</y>
+     <width>111</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>reverse?</string>
+    <string>to</string>
    </property>
   </widget>
+  <widget class="QCheckBox" name="reverseCheckBox">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>210</y>
+     <width>251</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>I want to print from end to beginning</string>
+   </property>
+  </widget>
+  <widget class="QTextEdit" name="EndTextEdit">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>20</y>
+     <width>61</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>90</y>
+     <width>143</width>
+     <height>76</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QRadioButton" name="NormalRadioButton">
+      <property name="text">
+       <string>Normal</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QRadioButton" name="EvenRadioButton">
+      <property name="text">
+       <string>Even Number Pages</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QRadioButton" name="OddRadioButton">
+      <property name="text">
+       <string>Odd Number Pages</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>400</x>
+     <y>240</y>
+     <width>195</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
+     <widget class="QPushButton" name="acceptButton">
+      <property name="text">
+       <string>Let's do this</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="cancelButton">
+      <property name="text">
+       <string>Cancel</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <zorder>label</zorder>
+  <zorder>BeginTextEdit</zorder>
+  <zorder>label_2</zorder>
+  <zorder>acceptButton</zorder>
+  <zorder>cancelButton</zorder>
+  <zorder>reverseCheckBox</zorder>
+  <zorder></zorder>
+  <zorder>EndTextEdit</zorder>
+  <zorder>NormalRadioButton</zorder>
+  <zorder>EvenRadioButton</zorder>
+  <zorder>OddRadioButton</zorder>
+  <zorder>NormalRadioButton</zorder>
+  <zorder>EvenRadioButton</zorder>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
